[gd_scene load_steps=2 format=3 uid="uid://nv30vjbkrio1"]

[ext_resource type="Script" uid="uid://c303jsbk6o67u" path="res://gui/game_ui.gd" id="1_lqx5y"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_lqx5y")

[node name="CoinFlipButtons" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Heads" type="Button" parent="CoinFlipButtons"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 740.0
offset_top = 951.0
offset_right = 940.0
offset_bottom = 1040.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
text = "Heads"

[node name="Tails" type="Button" parent="CoinFlipButtons"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 943.0
offset_top = 950.0
offset_right = 1167.0
offset_bottom = 1039.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
text = "Tails"

[node name="Skip" type="Button" parent="CoinFlipButtons"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 842.0
offset_top = 865.0
offset_right = 1039.0
offset_bottom = 948.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
text = "Skip"

[connection signal="pressed" from="CoinFlipButtons/Heads" to="." method="_on_heads_pressed"]
[connection signal="pressed" from="CoinFlipButtons/Tails" to="." method="_on_tails_pressed"]
[connection signal="pressed" from="CoinFlipButtons/Skip" to="." method="_on_skip_pressed"]
